[package]
name = "wiremock-min"
version = "0.1.0"
authors = ["Andreas Studer <foss@exul.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }

[dev-dependencies]
wiremock = "0.2"
surf = "1"
reqwest = { version = "0.10", features = ["json"] }
